--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         </ul>
     </div>
 </nav>
-
+<div class="container">
 <h1 style="text-align: center">What do you want to search for on Codedaddies List?</h1>
 <div class="row">
     <div class="col s4">
@@ -50,7 +50,11 @@
         </div>
     </div>
 </div>
+</div>
 
+{% block content %}
+
+{% endblock content %}
 
 
 </body>
