--- a/templates/base.html
+++ b/templates/base.html
@@ -49,13 +49,20 @@
             <p class="light center">We built this with you.</p>
         </div>
     </div>
+        <form action="{% url 'new_search' %}" method="post">
+    {% csrf_token %}
+    <input type="text" name="search" placeholder="search">
+    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+    </button>
+    </form>
 </div>
-</div>
+
 
 {% block content %}
 
 {% endblock content %}
-
+</div>
 
 </body>
 </html>
