--- a/templates/my_app/new_search.html
+++ b/templates/my_app/new_search.html
@@ -4,6 +4,7 @@
 
 
     <h2 style="text-align: center">{{ search | title }}</h2>
+    <div class="row">
     <div class="col s4">
         <div class="card">
             <div class="card-image">
@@ -16,6 +17,33 @@
                 <a href="{{ posting.1 }}">View listing: Price {{ posting.2 }}</a>
             </div>
         </div>
+    </div>
+        <div class="col s4">
+        <div class="card">
+            <div class="card-image">
+                <a href="{{ posting.1 }}"><img src="{{ posting.3 }}" alt=""></a>
+            </div>
+            <div class="card-content">
+                <p>{{ posting.0 }}</p>
+            </div>
+            <div class="card-action">
+                <a href="{{ posting.1 }}">View listing: Price {{ posting.2 }}</a>
+            </div>
+        </div>
+    </div>
+        <div class="col s4">
+        <div class="card">
+            <div class="card-image">
+                <a href="{{ posting.1 }}"><img src="{{ posting.3 }}" alt=""></a>
+            </div>
+            <div class="card-content">
+                <p>{{ posting.0 }}</p>
+            </div>
+            <div class="card-action">
+                <a href="{{ posting.1 }}">View listing: Price {{ posting.2 }}</a>
+            </div>
+        </div>
+    </div>
     </div>
 
 
